[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/posepal/batch_key_popup/property_display/PropertyItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/posepal/assets/icons/icon_expand.png" type="Texture" id=2]
[ext_resource path="res://addons/posepal/batch_key_popup/property_display/PropertyDisplay.gd" type="Script" id=3]

[node name="PropertyDisplay" type="VBoxContainer"]
margin_right = 271.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeTab" type="PanelContainer" parent="."]
margin_right = 271.0
margin_bottom = 30.0

[node name="TabHBox" type="HBoxContainer" parent="NodeTab"]
margin_left = 7.0
margin_top = 7.0
margin_right = 264.0
margin_bottom = 23.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandButton" type="TextureButton" parent="NodeTab/TabHBox"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="NodeTab/TabHBox"]
margin_left = 20.0
margin_top = 1.0
margin_right = 54.0
margin_bottom = 15.0
text = "Node"

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 34.0
margin_right = 271.0
margin_bottom = 50.0
columns = 2

[node name="PropertyItem" parent="GridContainer" instance=ExtResource( 1 )]
margin_right = 20.0
